--- a/app/assets/stylesheets/pages/category.scss
+++ b/app/assets/stylesheets/pages/category.scss
@@ -5,43 +5,38 @@
   .img-category{
   	background:linear-gradient(135deg, rgba(0,0,0,0.4) 0%, rgba(0,0,0,0.4) 100%), image_url('category/peinture.jpg');
   	background-size: cover;
-  	height: 20vh;
-  	min-height: 300px;
   	text-align: center;
-  	display: table;
+  	padding:40px 0 80px;
   	width:100%;
 
-  	.display-tablCell{
-  		display:table-cell;
-  		vertical-align: middle;
+    .container{
+      margin-top: 40px;
 
-      .container{
-        margin-top: 40px;
+      span{
+        color:#fff;
+        padding:20px 30px;
+        border:1px solid #fff;
+        @include border-radius(3px);
+        @include transition(0.3s);
 
-        span{
-          color:#fff;
-          padding:20px 30px;
-          border:1px solid #fff;
-          @include border-radius(3px);
-          @include transition(0.3s);
-
-          &:hover{
-            background:$green;
-             border:1px solid $green;
-          }
+        &:hover{
+          background:$green;
+           border:1px solid $green;
         }
       }
+    }
 
-	  	h1{
-	  		color:#fff;
-	  		margin:0;
-	  	}
-	  }
+  	h1{
+  		color:#fff;
+  		margin:0;
+  	}
+	  
   }
 
   .category-sidebar{
   	background:#fff;
     @include white-block();
+    padding:20px 20px 40px 20px;
 
     h3{
       margin-bottom: 20px;
@@ -62,22 +57,35 @@
     margin-bottom:10px;
     color:$text-color;
 
+    p{
+      margin:0;
+    }
+
     .product-stars-container{
       margin-top: 20px;
     }
   }
 
-  .bloc_tutorial{
+  .bloc_tutoriels{
     background-image: image_url('img_tuto_category.png');
     background-size:cover;
     width: 100%;
-    height:550px;
+    height:600px;
     padding:50px;
     color:#fff;
+    text-align: center;
 
     h2{
-      margin-bottom:50px;
+      margin:0 0 50px 0;
+    }
+
+    .btn-default{
+      margin-top:40px;
     }
   } 
+
+  .certification{
+    background:#fff;
+  }
 }
 
