--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,3 +1,9 @@
-<div class="shopping-cart container">
-  <%= render "shopping_cart" %>
+<div class="shopping-cart">
+	<div class="row">
+		<div class="col-md-16 col-md-offset-1">
+			<%= render "shopping_cart" %>
+		</div>
+		<div class="col-md-5 col-md-offset-1">
+			
+		</div>
 </div>
