--- a/app/assets/stylesheets/pages/cart.scss
+++ b/app/assets/stylesheets/pages/cart.scss
@@ -1,5 +1,5 @@
 .shopping-cart{
-  padding-top:60px;
+  padding:60px 0;
   .well{
     @include white-block();
     background: #fff !important;
@@ -25,6 +25,25 @@
 
       input{
         width:70px;
+      }
+    }
+  }
+
+  .sidebar-cart{
+    @include white-block();
+
+    h3{
+      margin-bottom: 20px;
+    }
+
+    .sidebar-item{
+      padding:15px 0;
+
+      &.total-item{
+        span{
+          font-size:20px;
+          font-weight: 400;
+        }
       }
     }
   }
