fix bug style carroussel home

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -23,7 +23,7 @@ $color-linkedin: #0177b5;
 
 /******* GRADIENT ********/
 
-$green-gradient: linear-gradient(45deg, #75AD31 0%, #3EA581 94%);
+$green-gradient: linear-gradient(45deg, #3EA581 0%, $green 94%);
 $blue-gradient: linear-gradient(-135deg, #38A7C9 0%, #3864C9 100%);
 
 /******* SHADOWS ********/
