--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -65,10 +65,10 @@
       <div class="carousel-inner" role="listbox">
         <div class="item active">
           <div class="row">
-            <div class="col-md-14">
+            <div class="col-md-12">
               <%= image_tag("ccm1.png") %>
             </div>
-            <div class="item-description col-md-10">
+            <div class="item-description col-md-12">
               <h3>Tout ce dont vous avez besoin, au même endroit</h3>
               <p>Nous travaillons à maintenir un catalogue de produits et de marchands le plus fourni et diversifié possible. Tout ce dont vous avez besoin se trouve sur Climateriaux, plannifiez tous vos achats au même endroit et retrouver clairement le suivi de votre budget.<br>Tous les produits sont rangés par nos soins dans les catégories les plus adaptés de façon à vous faire gagner du temps, et vous permettre de trouver facilement ce dont vous avez besoin.</p>
             </div>
@@ -76,10 +76,10 @@
         </div>
         <div class="item ">
           <div class="row">
-            <div class="col-md-14">
+            <div class="col-md-12">
               <%= image_tag("ccm1.png") %>
             </div>
-            <div class="item-description col-md-10">
+            <div class="item-description col-md-12">
               <h3>Une communauté d'entre aide et de conseil</h3>
               <p>Climateraiux n'est pas seulement un marché, c'est aussi un lieu d'échange sur lequel vous pouvez discuter de vos travaux, trouver des conseil avisés, et demander de l'aide à tout moment. Nous mettons en avant les échanges communautaires, car c'est en retrouvant des gens comme vous et aux expérience similaires que votre projet gagnera en maturité.<br><br>Retrouvez la plateforme d'entraide sur : <a href="#">communaute.climateriaux.fr</a></p>
             </div>
@@ -87,12 +87,12 @@
         </div>
         <div class="item ">
           <div class="row">
-            <div class="col-md-14">
+            <div class="col-md-12">
               <%= image_tag("ccm1.png") %>
             </div>
-            <div class="item-description col-md-10">
+            <div class="item-description col-md-12">
               <h3>Des outils pour calculer et comprendre</h3>
-              <p>Parce qu'on a toujours besoin d'un petit coup de pouce, Climateriaux vous propose un ensemble d'outils d'aide et de calculs comme pour vous éclairer dans les taches les plus complexes : <br> <ul><li>Estimation des économies d'énergie apportées par votre projet</li><li>Calcul des déductions d'impots</li><li>Démarches à mettre en place pour profiter de subventions</li></ul></p>
+              <p>Parce qu'on a toujours besoin d'un petit coup de pouce, Climateriaux vous propose un ensemble d'outils d'aide et de calculs comme pour vous éclairer dans les taches les plus complexes : <br>Estimation des économies d'énergie apportées par votre projet<br>Calcul des déductions d'impots</br>Démarches à mettre en place pour profiter de subventions</p>
             </div>
           </div>
         </div>
