img caroussel home

--- a/app/assets/stylesheets/pages/home.scss
+++ b/app/assets/stylesheets/pages/home.scss
@@ -185,7 +185,7 @@
 .howItWork-home{
   background: $green-gradient;
   color:#fff;
-  padding:40px 100px 0 100px;
+  padding:40px 100px;
 
   h2{
     margin-top:0;
