--- a/app/assets/stylesheets/pages/tutorial.scss
+++ b/app/assets/stylesheets/pages/tutorial.scss
@@ -12,6 +12,14 @@
   	}
 }
 
+.view-tutorial{
+	padding:60px 0;
+	h2{
+		text-align: center;
+		margin:0 0 60px 0;
+	}
+}
+
 .tutoriel {
 	padding: 40px 20px 65px 20px;
 	background-color: #f6f6f6;
