--- a/app/views/tutorials/show.html.erb
+++ b/app/views/tutorials/show.html.erb
@@ -1,2 +1,10 @@
-<h1><%= @tutorial.title %></h1>
-<p><%= @tutorial.content %></p>
+<div class="view-tutorial">
+	<div class="row">
+		<h2><%= @tutorial.title %></h2>
+		<div class="row">
+			<div class="col-md-22 col-md-offset-1">
+				<p><%= @tutorial.content %></p>
+			</div>
+		</div>
+	</div>
+</div>
