ajout de la page help

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,7 +16,7 @@
         <%= render 'layouts/header_search'%>
         <ul class="nav navbar-nav">
           <li class="block-user">
-            <%= link_to root_path do %>
+            <%= link_to help_index_path do %>
               Aide
             <% end %>
           </li>
