--- a/app/views/categories/_header_img.html.erb
+++ b/app/views/categories/_header_img.html.erb
@@ -1,6 +1,6 @@
 <div class="img-category">
   
-    <h1>Peintures & colles</h1>
+    <h1><%= @category.name %></h1>
     <div class="container">
       <div class="row">
         <div class="col-md-6">
