--- a/app/views/admin/tutorials/edit.html.erb
+++ b/app/views/admin/tutorials/edit.html.erb
@@ -31,7 +31,7 @@
         <div class="form-group">
           <%= f.label :content, class: 'col-sm-2 control-label' %>
           <div class="col-sm-10">
-            <%= f.text_area :content, class: 'form-control' %>
+            <%= f.text_area :content, class: 'form-control', rows: 10 %>
           </div>
         </div>
       </fieldset>
