--- a/app/views/tutorials/show.html.erb
+++ b/app/views/tutorials/show.html.erb
@@ -3,7 +3,7 @@
 		<h2><%= @tutorial.title %></h2>
 		<div class="row">
 			<div class="col-md-22 col-md-offset-1">
-				<p><%= @tutorial.content %></p>
+				<p><%= @tutorial.content.html_safe %></p>
 			</div>
 		</div>
 	</div>
