--- a/app/views/help/index.html.erb
+++ b/app/views/help/index.html.erb
@@ -74,7 +74,7 @@
 		</div>
 		<div class="img-bottom-help"></div>
 	</section>
-	<section>
+	<section class="user-link-help">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 community">
@@ -86,12 +86,12 @@
 					<a class="btn-default">Accéder à l'espace</a>
 				</div>
 				<div class="col-md-12">
-					<div class="">
+					<div class="help-tuto">
 						<h3>Nos tutos</h3>
 						<p>Isolation du toît, Apprenez et progresez !</p>
 						<a class="btn-default">Voir tous les tutos</a>
 					</div>
-					<div class="">
+					<div class="calcul-tool">
 						<h3>Nos outils de calcul</h3>
 						<span>DÉDUCTION D’IMPÔTS - BUDGET À PRÉVOIR</span>
 						<a class="btn-default">Utiliser nos outils</a>
