--- a/app/assets/stylesheets/pages/help.scss
+++ b/app/assets/stylesheets/pages/help.scss
@@ -1,6 +1,12 @@
 .page_help{
 	text-align:center;
 	background:#fff;
+	padding-top:60px;
+
+	h2{
+		margin-bottom: 40px;
+	}
+
 	#search{
 		width:700px;
 		text-align: center;
@@ -41,22 +47,51 @@
 		}
 	}
 
-	.community{
-		h3, p{
-			color:#fff;
+	.user-link-help{
+		padding:60px 0;
+		h3{
+			margin-bottom: 20px;
 		}
 
-		background:$green;
-		padding:40px;
+		span{
+			margin:20px 0;
+		}
 
 		.btn-default{
-			background:#fff;
-			color:$green;
+			margin-top:20px;
+		}
 
-			&:hover, &:active{
-				background:#fff;
-				colot:$green;
+		.community{
+			h3, p{
+				color:#fff;
 			}
+
+			background:$green;
+			padding:42px 40px;
+
+			.btn-default{
+				background:#fff;
+				color:$green;
+
+				&:hover, &:active{
+					background:#fff;
+					colot:$green;
+				}
+			}
+		}
+
+		.help-tuto{
+			background:image_url('img_tuto_help.jpg');
+			padding:40px;
+			h3, p{
+				color:#fff;
+			}
+		}
+
+		.calcul-tool{
+			background:#FACC39;
+			padding:40px;
+			margin-top:5px;
 		}
 	}
 }
