--- a/app/assets/stylesheets/pages/category.scss
+++ b/app/assets/stylesheets/pages/category.scss
@@ -2,7 +2,7 @@
   padding:0;
 
   .img-category{
-  	background:linear-gradient(135deg, rgba(0,0,0,0.4) 0%, rgba(0,0,0,0.4) 100%), image_url('category/peinture.jpg');
+  	background:linear-gradient(135deg, rgba(0,0,0,0.4) 0%, rgba(0,0,0,0.4) 100%), image_url('category/isolation.jpg');
   	background-size: cover;
   	text-align: center;
   	padding:40px 0 80px;
