--- a/app/views/carts/_shopping_cart.html.erb
+++ b/app/views/carts/_shopping_cart.html.erb
@@ -14,6 +14,22 @@
 <% else %>
   <div class="row">
     <div class="col-md-16 col-md-offset-1">
+      <div class="cart-process">
+        <div class="row">
+          <div class="col-md-8">
+            <span class="cart-process-numbers">1</span>
+            <h3>Mes achats</h3>
+          </div>
+          <div class="col-md-8">
+            <span class="cart-process-numbers">2</span>
+            <h3>Livraison</h3>
+          </div>
+          <div class="col-md-8">
+            <span class="cart-process-numbers">3</span>
+            <h3>Paiement</h3>
+          </div>
+        </div>
+      </div>
       <div class="well">
         <div class="row">
           <div class="col-xs-3 display-table">
