--- a/app/views/carts/_shopping_cart.html.erb
+++ b/app/views/carts/_shopping_cart.html.erb
@@ -72,6 +72,7 @@
           <span>Total</span>
           <span class="pull-right"><%= @total%> €</span>
         </div>
+        <button class="add-to-cart">valider la commande</button>
       </div>
     </div>
   </div>
